# MulimgViewer

./: .deepsource.toml  .gitignore  .gitlint  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .rubocop.yml  .yamllint.yaml  CHANGELOG.md  CITATION.cff  DEV_README.md  MulimgViewer  MulimgViewer.py  README.md  about.py  about_gui.py  default.nix  filelist.csv  filelist.txt  fl.txt  flake.nix  generate_filelist.py  index_table.py  index_table_gui.py  install.yaml  log.txt  main.py  main_gui.py  mulimg_viewer.py  mulimg_viewer_gui.py  output.json  output_s.json  path_select.py  path_select_gui.py  pyproject.toml  python-mulimgviewer.rb  quick_test.py  requirements.txt  select_image.py  select_image_gui.py  (+6 more)
.github/: dependabot.yml
.github/workflows/: main.yml  pylint.yml
assets/desktop/: mulimgviewer.desktop
demo_input_from_file/: test_input_from_flist_ubuntu.txt  test_input_from_flist_win10.txt
docs/: conf.py  index.md  requirements.txt
docs/dev/: dev.md
docs/locale/en/LC_MESSAGES/: index.po
docs/locale/en/LC_MESSAGES/dev/: dev.po
docs/locale/en/LC_MESSAGES/misc/: acknowledgements.po  changelog.po  todo.po
docs/locale/en/LC_MESSAGES/resources/: install.po  usage.po
docs/misc/: acknowledgements.md  changelog.md  todo.md
docs/resources/: dev.md  install.md  usage.md
examples/: add_new_info_to_img.py  add_new_info_to_img_custom.py  exif_to_csv.py
examples/input/: flist_ubuntu.txt  flist_win10.txt  parallel_manual_ubuntu.txt  parallel_manual_win10.txt
exfi/: add_new_info_to_img.py
gui/: about_gui.fbp  index_table_gui.fbp  main_gui.fbp  main_gui.py  path_select_gui.fbp
requirements/: dev.txt  update.txt
src/: about.py  data.py  exif_display_config.json  index_table.py  main.py  path_select.py  utils.py  utils_img.py
src/mulimgviewer/: __init__.py  __main__.py  _version.py  config.txt
src/mulimgviewer/configs/: default_config.json  exif_display_config.json  exif_tag_mappings.json  output.json  output_s.json  userdef_config.json
src/mulimgviewer/gui/: about_gui.fbp  about_gui.py  config.txt  index_table_gui.fbp  index_table_gui.py  main_gui.fbp  main_gui.py  path_select_gui.fbp  path_select_gui.py
src/mulimgviewer/src/: about.py  data.py  index_table.py  main.py  path_select.py  test.py  utils.py  utils_img.py  video_select.py  video_select_dialog.py
src/mulimgviewer/src/custom_func/: main.py
src/mulimgviewer/src/custom_func/Gaussian Blur/: main.py
src/mulimgviewer/src/custom_func/Image Darkening/: main.py
src/mulimgviewer/src/custom_func/Image Enhancement/: main.py
src/mulimgviewer/src/custom_func/Oil Painting Effect/: main.py
test_input_from_file/: test_input_flist_parallel_manual_ubuntu.txt  test_input_flist_parallel_manual_win10.txt  test_input_from_flist_ubuntu.csv  test_input_from_flist_win10.csv
wxFromBuilder/: about.fbp  about_gui.fbp  index_table.fbp  main_gui.fbp  manual_select_path.fbp  newgui.fbp
