[build-system]
requires = ["setuptools_scm[toml] >= 6.2", "setuptools-generate"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "mulimgviewer"
description = "A multi-image viewer that can open multiple images in one interface, which is convenient for image comparison and image stitching."
readme = "README.md"
requires-python = ">= 3.7"
keywords = [
  "computer-vision",
  "deep-learning",
  "ubuntu",
  "viewer",
  "parallel",
  "python3",
  "image-viewer",
  "windows10",
  "image-comparison",
  "image-stitching",
  "opencas",
  "picture-viewer",
  "multiple-imageview",
  "multiple-images",
  "multiple-image-comparison",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[[project.authors]]
name = "nachifur"
email = "1476879092@qq.com"

[project.license]
text = "GPL v3"

[project.urls]
Homepage = "https://mulimgviewer.readthedocs.io"
Download = "https://github.com/nachifur/mulimgviewer/releases"
"Bug Report" = "https://github.com/nachifur/mulimgviewer/issues"
Source = "https://github.com/nachifur/mulimgviewer"

[project.gui-scripts]
mulimgviewer = "mulimgviewer.__main__:main"

[tool.setuptools.package-data]
mulimgviewer = ["*.png", "font/using/*"]

[tool.setuptools.data-files]
"share/applications" = ["assets/desktop/mulimgviewer.desktop"]
"share/icons/hicolor/256x256/apps" = ["src/mulimgviewer/mulimgviewer.png"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.dev]
file = "requirements/dev.txt"

[tool.setuptools.dynamic.optional-dependencies.update]
file = "requirements/update.txt"

[tool.setuptools_scm]
write_to = "src/mulimgviewer/_version.py"

[tool.setuptools-generate]
write-to = "src/mulimgviewer/_metainfo.py"

[tool.black]
# some code generated by wxFromBuilder is too long
line-length = 240

[tool.isort]
line_length = 240
profile = "black"

# https://github.com/PyCQA/pydocstyle/issues/418
[tool.pydocstyle]
add_ignore = "D205, D400"

[tool.doq]
template_path = "templates"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
